k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-native
  labels:
    app: cloud-native-demo
